# supervisely_test

./: README.md  pyproject.toml
task1/: merge_image.py  split_image.py
task2/: data_visualisator.py  grid.py
